<resources>
    <string name="app_name">Hello_World</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Back</string>

    <string name="hello_first_fragment">0</string>
    <string name="random_heading">The Chosen Random Color is #%s in hex.</string>

    <string name="random_button_text">Submit</string>

    <string name="red_button_text">Red</string>
    <string name="blue_button_text">Blue</string>
    <string name="green_button_text">Green</string>

    <string name="red_hex_text">Red</string>
    <string name="blue_hex_text">Blue</string>
    <string name="green_hex_text">Green</string>
</resources>